--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,18 @@
     <link href="output.css" rel="stylesheet">
     <title>GERÊNCIA DE CIRCUITOS</title>
 </head>
-<body>
-  <div class="flex bg-slate-700">
-    <h1 class="text-cyan-400">Gerência de Circuitos Ips e Vlans</h1>
- <input type="text" placeholder="Pesquisar">
- <button type="button">Pesquisa</button>
-
+<body class="bg-slate-500">
+  <div class="flex bg-slate-700 h-16 justify-around items-center">
+    <h1 class="text-cyan-400 text-xl">Gerência de Circuitos Ips e Vlans</h1>
+    <div>
+       <input class="h-8 p-2" type="text" placeholder="Pesquisar">
+       <button class="bg-gray-400 text-slate-200 h-8 w-20 p-1" type="button">Pesquisa</button>
+    </div>
   </div>
-  
+  <div class=" flex bg-slate-500">
+    <div class="bg-slate-800 w-1/4 h-auto"></div>
+    <div class="bg-slate-400 w-3/5 h-auto" ></div>
+  </div>
     
   
 
